<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/mrg20"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@android:string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/payclicker"
        android:layout_above="@id/ln_login"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/mrg5"/>

    <LinearLayout
        android:id="@+id/ln_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColorHighlight="#7cff88" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHighlight="#7cff88" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/mrg5"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mrg20"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln_login"
        android:layout_marginTop="@dimen/mrg35"
        android:background="@drawable/rounded_button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        />

</RelativeLayout>